--- a/Patents classification.ipynb
+++ b/Patents classification.ipynb
@@ -81,11 +81,11 @@
    "source": [
     "# Missing values have to be imputed in order to create an xgboost model.\n",
     "def impute_missing_values(X):\n",
-    "    # Impute missing values in numeric columns with mean.\n",
+    "    # Impute missing values in numeric columns with the mean.\n",
     "    for numeric_col in X.columns[X.dtypes != \"object\"]:\n",
     "        X[numeric_col].fillna(X[numeric_col].mean(), inplace=True)\n",
     "        \n",
-    "    # Replace NaN values in categorical variables by \"Missing value\"\n",
+    "    # Replace NaN values in categorical variables by \"Missing value\".\n",
     "    for categorical_col in X.columns[X.dtypes == \"object\"]:\n",
     "        X.loc[X[categorical_col].isnull(), categorical_col] = \"Missing value\"\n",
     "        \n",
@@ -1433,8 +1433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This graph seems to show that the time elapsed between filing and priority dates is positively correlated with the granted patents rate. An application with the same filing and priority dates might be linked with a parent application thus reducing the chance of true novelty.\n",
-    "Note that the granted patents rate decreases and stays constant after about one year as most of the applications fit in that duration."
+    "This graph seems to show that the time elapsed between filing and priority dates is positively correlated with the granted patents rate. An application with the same filing and priority dates might be linked with a parent application thus reducing the chance of true novelty."
    ]
   },
   {
@@ -1737,8 +1736,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In accordance with our intuition, a shorter interval between the begin date and the publication date seems correlated with a higher patent grating rate.\n",
-    "Likewise, note that the granted patents rate increases and stays constant after about eighteen months as most of the applications are published after that duration."
+    "In accordance with our intuition, a shorter interval between the begin date and the publication date seems correlated with a higher patent grating rate."
    ]
   },
   {
@@ -1803,7 +1801,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will thus replace the missing values of _COUNTRY_ by the most associated _COUNTRY_ according to its _FISRT_APP_COUNTRY_."
+    "We thus replace the missing values of _COUNTRY_ by the most associated _COUNTRY_ according to its _FISRT_APP_COUNTRY_."
    ]
   },
   {
@@ -1815,7 +1813,7 @@
    "outputs": [],
    "source": [
     "def replace_country(X):\n",
-    "    # Group by FISRT_APP_COUNTRY and counting COUNTRY values.\n",
+    "    # Group by FISRT_APP_COUNTRY and count COUNTRY values.\n",
     "    associated_country = X.groupby(\"FISRT_APP_COUNTRY\")[\"COUNTRY\"].value_counts()\\\n",
     "                         .reset_index(name=\"count\")\n",
     "    # Compute the index of the most recurrent COUNTRY for each FISRT_APP_COUNTRY.\n",
@@ -1828,7 +1826,7 @@
     "    # Create a dictionary associating FISRT_APP_COUNTRY to COUNTRY.\n",
     "    country_dict = associated_country.set_index(\"FISRT_APP_COUNTRY\")[\"COUNTRY\"].to_dict()\n",
     "\n",
-    "    # Replace the missing values of COUNTRY\n",
+    "    # Replace the missing values of COUNTRY.\n",
     "    missing_country = X[\"COUNTRY\"].isnull()\n",
     "    X.loc[missing_country, \"COUNTRY\"] = X.loc[missing_country, \"FISRT_APP_COUNTRY\"]\\\n",
     "                                        .replace(country_dict) "
@@ -1864,9 +1862,10 @@
     "    # Preprocess the dates.\n",
     "    date_preprocessing(X)\n",
     "    \n",
-    "    # Replace missing values of COUNTRY\n",
+    "    # Replace missing values of COUNTRY.\n",
     "    replace_country(X)\n",
     "    \n",
+    "    # Impute the missing values.\n",
     "    impute_missing_values(X)"
    ]
   },
@@ -1880,7 +1879,7 @@
    "source": [
     "preprocessing(df_all)\n",
     "\n",
-    "# Recreate train and test data frame\n",
+    "# Recreate train and test data frame.\n",
     "df_train, df_test = df_all[:len(df_train)], df_all[len(df_train):]"
    ]
   },
@@ -1899,14 +1898,14 @@
    "source": [
     "Tuning the hyperparameters of our model is essential to ensure that the extreme gradient booster (xgboost) best fits our data:\n",
     "\n",
-    "* __eta__: learning rate. A low learning rate ($<0.1$) yields models avoiding overfitting but which require more trees.\n",
+    "* __eta__: learning rate. A low learning rate ($<0.1$) yields models which avoid overfitting but require more trees.\n",
     "* __max_depth__: maximum tree depth. High values might lead to a model fitting too closely the training set.\n",
     "* __min_child_weight__: Minimum sum of weight needed in a child. High values will lead to a more conservative model.\n",
     "* __gamma__: minimum loss reduction required to create an additionnal split on a leaf. The larger the gamma, the more conservative the algorithm will be.\n",
     "* __subsample__: subsample ratio of the training set. Setting this parameter lower than 1 helps avoiding overfitting.\n",
     "* __lambda__: $L_2$ regularisation in order to reduce overfitting.\n",
     "\n",
-    "We will use a randomised grid search in order to find the best hyperparameters, given that each cross-validation is computationally costly."
+    "We will use a randomised grid search in order to find the best hyperparameters, given that each cross-validation is computationally expensive."
    ]
   },
   {
@@ -2058,7 +2057,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us now tune the hyperparameters more finely the model with the selected features."
+    "Let us now tune more finely the hyperparameters of the model with the selected features."
    ]
   },
   {
@@ -2084,7 +2083,7 @@
     "%%capture\n",
     "t0 = time.time()\n",
     "\n",
-    "# Finer grid to pick parameters from.\n",
+    "# Finer grid to pick hyperparameters from.\n",
     "parameters_grid_final = {\"eta\": hp.quniform(\"eta\", 0.01, 0.05, 0.01),\n",
     "         \"max_depth\": hp.choice(\"max_depth\", np.arange(8, 12, dtype=int)),\n",
     "         \"min_child_weight\": hp.quniform(\"min_child_weight\", 4, 8, 1),\n",
@@ -2111,7 +2110,7 @@
    },
    "outputs": [],
    "source": [
-    "# Save the best parameters as a csv.\n",
+    "# Save the final best parameters as a csv.\n",
     "best_parameters_final = pd.DataFrame({key: [value] for (key, value) in \n",
     "                                zip(space_eval(parameters_grid_final, best_final).keys(),\n",
     "                                    space_eval(parameters_grid_final, best_final).values())})\n",
