--- a/Patents classification.ipynb
+++ b/Patents classification.ipynb
@@ -2002,7 +2002,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Feature selection"
+    "##Feature selection"
    ]
   },
   {
