--- a/Patents classification.ipynb
+++ b/Patents classification.ipynb
@@ -1978,7 +1978,7 @@
     "best = fmin(scoring_function, parameters_grid, algo=tpe.suggest, max_evals=10, \n",
     "            trials=trials) \n",
     "\n",
-    "computingTime = time.time() - t0"
+    "computing_time = time.time() - t0"
    ]
   },
   {
@@ -2099,7 +2099,7 @@
     "best_final = fmin(scoring_function, parameters_grid_final, algo=tpe.suggest, max_evals=10, \n",
     "            trials=trials_final)\n",
     "\n",
-    "computingTime = time.time() - t0"
+    "computing_time = time.time() - t0"
    ]
   },
   {
